# Mydiy

./: CMakeLists.txt
Src/Sorting/: mergeSort.cpp
include/Sorting/: Sorting.tpp  Sortings.hpp  mergeSort.hpp
